Add white-space: normal to .renderjson .string
Signed-off-by: Zhijian Xia <isword.xia@gmail.com>

--- a/swagger_preview.css
+++ b/swagger_preview.css
@@ -10,3 +10,5 @@
 .renderjson .keyword       { color: rgb(42, 163, 58); }
 .renderjson .object.syntax { color: lightseagreen; }
 .renderjson .array.syntax  { color: lightsalmon; }
+
+#swagger-json-container .renderjson .string { white-space: normal }
